# vk2tg_translator

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: group_data.rs  lib.rs  long_polling_meta_data.rs  lp_response.rs  main.rs  meta_data.rs  telegraph.rs  test_json.json
