[package]
name = "vk2tg_translator"
version = "0.1.0"
authors = ["Anton Sapunov <fort.sav.28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.1"
scraper = "0.11.0"
log = "0.4.8"
tokio = "0.2.9"
pretty_env_logger = "0.4.0"
parse-display = "0.1.1"
teloxide = "0.2.0"
clap = "2.26.0"
anyhow = "1.0.28"
serde_json = "1.0.48"
serde = { version = "1.0.104", features = ["derive"]  }
telegraph-rs = "0.3.1"
